--- a/club_side/Styles/general.css
+++ b/club_side/Styles/general.css
@@ -27,8 +27,9 @@ body{
 
 .button-container {
     display: flex;
-  }
-  table {
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
@@ -49,7 +50,7 @@ table th { /*influence the header cells in the table*/
 }
 
 .more-cell {
-    text-align: center; /* Center the content horizontally */
+    text-align: left; /* Center the content horizontally */
     vertical-align: middle; /* Center the content vertically */
 }
 .more-icon {
